@@ -1,8 +1,14 @@
+2007-03-11  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdIL.c (Tcl_LreverseObjCmd): Ensure that a list is
+	correctly reversed even if its internal representation is shared
+	without the object itself being shared. [Bug 1675044]
+
 2007-03-10  Miguel Sofer  <msofer@users.sf.net>
 
-	* generic/tclCmdIL (Tcl_LsortObjCmd): changed fix to [Bug 1675116]
-	to use the cheaper TclListObjCopy() instead of Tcl_DuplicateObj()  
-	
+	* generic/tclCmdIL (Tcl_LsortObjCmd): changed fix to [Bug 1675116] to
+	use the cheaper TclListObjCopy() instead of Tcl_DuplicateObj().
+
 2007-03-09  Andreas Kupries  <andreask@activestate.com>
 
 	* library/platform/shell.tcl: Made more robust if an older platform
